--- a/Source/Jimmaphy.AdvancedProductDesignExtractor.csproj
+++ b/Source/Jimmaphy.AdvancedProductDesignExtractor.csproj
@@ -6,6 +6,44 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Assets\Icon.ico</ApplicationIcon>
+    <Title>Advanced Product Design Extractor</Title>
+    <RepositoryUrl>https://github.com/Jimmaphy/HZSMUProductDesignExtractor</RepositoryUrl>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/Jimmaphy/HZSMUProductDesignExtractor</PackageProjectUrl>
+    <Description>Tiny extrator application for use during the Advanced Product Design Course at the Shanghai Maritime University by the HZ University of Applied Sciences</Description>
+    <Authors>Jimmaphy</Authors>
+    <Product>Advanced Product Design Extractor</Product>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\Icon.ico" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="SharpCompress" Version="0.38.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
 
 </Project>
