--- a/Source/Jimmaphy.AdvancedProductDesignExtractor.csproj
+++ b/Source/Jimmaphy.AdvancedProductDesignExtractor.csproj
@@ -14,6 +14,7 @@
     <Description>Tiny extrator application for use during the Advanced Product Design Course at the Shanghai Maritime University by the HZ University of Applied Sciences</Description>
     <Authors>Jimmaphy</Authors>
     <Product>Advanced Product Design Extractor</Product>
+    <FileVersion>1.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
